// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render TaskListGroup 1`] = `
<div>
  <h3>
    CS2030
  </h3>
  <Connect(TaskListItem)
    dashboard={true}
    key="5feb18c0-78a8-49b6-8584-75b8c1b40abc"
    showGroup={false}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
  <Connect(TaskListItem)
    dashboard={true}
    key="a1050220-fa88-4dc2-aa9d-9521ae95de47"
    showGroup={false}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
</div>
`;

exports[`render should render TaskListGroup with alt group 1`] = `
<div>
  <h3>
    others
  </h3>
  <Connect(TaskListItem)
    dashboard={true}
    key="d2b10492-853d-4290-baf8-cb47cd4ec04e"
    showGroup={false}
    task={
      Object {
        "completed": true,
        "description": "",
        "id": "d2b10492-853d-4290-baf8-cb47cd4ec04e",
        "module": "",
        "title": "Read a book everyday",
      }
    }
  />
</div>
`;
